# agent-cron-server

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 4214c966ee83_add_callback_prompt_to_cron_task.py  63357c35fa64_add_callback_url_to_cron_tasks.py  6ebf7d089626_initial_schema.py
app/: config.py  database.py  main.py
app/api/: executions.py  router.py  tasks.py
app/mcp_server/: tools.py
app/models/: __init__.py  execution.py  log.py  task.py
app/scheduler/: runner.py  scheduler.py
app/schemas/: execution.py  task.py
app/services/: execution_service.py  task_service.py
app/static/: execution-detail.html  executions.html  index.html  task-detail.html  tasks.html
app/static/css/: style.css
app/static/js/: api.js  common.js  execution-detail.js  executions.js  index.js  task-detail.js  tasks.js
scripts/: callback_relay.py  gold_daily.py  news_fetch.py  sector_flow.py  start.sh  stock_alert.sh
skill/: SKILL.md
skill/scripts/: cron.sh
skill/templates/: acs-callback-prompt.txt
